skapade funktion för att uppdatera data

--- a/moment01/2.2/src/index.html
+++ b/moment01/2.2/src/index.html
@@ -51,8 +51,8 @@
         <p id="message"></p> 
         
         <h3>Kursinformation:</h3>
-        <section id="kurs_info">
-        </section>
+        <div id="kurs_info">
+        </div>
         <div class="clearBTN">
             <button id="clearbutton" class="btn">Rensa kurser</button>
         </div>
