justerade styling på sidorna

--- a/moment01/2.2/src/index.html
+++ b/moment01/2.2/src/index.html
@@ -28,7 +28,7 @@
             </span>
             <span class="inputSpan two">
                 <label for="Course_Name">kursnamn:</label>
-                <input type="text" id="Course_Name" placeholder="t.ex TypeScript">         <!--    &nbsp -->
+                <input type="text" id="Course_Name" placeholder="t.ex TypeScript"> 
             </span>
             <span class="inputSpan three">
                 <label for="Progression">progression:</label>
